--- a/db/package.json
+++ b/db/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "db",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@grocery-shop/db",
+  "version": "0.1.0",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
