--- a/db/package.json
+++ b/db/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "6.9.0"
+    "@prisma/client": "6.9.0",
+    "dotenv": "^16.5.0"
   }
 }
